// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`KpiTile renders a flat delta when none provided 1`] = `
<div
  class="surface-card ease-snap group relative flex h-full min-h-[128px] w-full flex-col gap-2 p-4 text-left transition-[color,background-color,border-color,box-shadow,opacity,transform] duration-150"
>
  <div
    class="flex items-start justify-between gap-3"
  >
    <div
      class="min-w-0 flex-1"
    >
      <p
        class="text-muted-foreground text-[11px] uppercase tracking-[0.14em]"
      >
        Backlog
      </p>
      <p
        class="text-foreground mt-1 text-[30px] font-[400] tabular-nums leading-none tracking-tight"
      >
        120
      </p>
    </div>
  </div>
  <div
    class="mt-1 flex items-end justify-between gap-3"
  >
    <span
      class="inline-flex items-center gap-1 rounded-sm px-2 py-0.5 text-[11px] font-medium bg-muted text-muted-foreground"
    >
      <svg
        class="lucide lucide-minus h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
      —
    </span>
  </div>
</div>
`;

exports[`KpiTile renders value, delta, and sparkline (snapshot) 1`] = `
<div
  class="surface-card ease-snap group relative flex h-full min-h-[128px] w-full flex-col gap-2 p-4 text-left transition-[color,background-color,border-color,box-shadow,opacity,transform] duration-150"
>
  <div
    class="flex items-start justify-between gap-3"
  >
    <div
      class="min-w-0 flex-1"
    >
      <p
        class="text-muted-foreground text-[11px] uppercase tracking-[0.14em]"
      >
        Velocity
      </p>
      <p
        class="text-foreground mt-1 text-[30px] font-[400] tabular-nums leading-none tracking-tight"
      >
        42
      </p>
      <p
        class="text-muted-foreground mt-0.5 text-xs"
      >
        points / sprint
      </p>
    </div>
  </div>
  <div
    class="mt-1 flex items-end justify-between gap-3"
  >
    <span
      class="inline-flex items-center gap-1 rounded-sm px-2 py-0.5 text-[11px] font-medium bg-accent-emerald/10 text-accent-emerald border border-accent-emerald/20"
    >
      <svg
        class="lucide lucide-trending-up h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <polyline
          points="22 7 13.5 15.5 8.5 10.5 2 17"
        />
        <polyline
          points="16 7 22 7 22 13"
        />
      </svg>
      +5.5%
    </span>
    <div
      class="h-10 w-24 shrink-0"
    >
      <div
        class="recharts-responsive-container"
        style="width: 100%; height: 100%; min-width: 0;"
      >
        <div
          style="width: 0px; height: 0px; overflow: visible;"
        />
      </div>
    </div>
  </div>
</div>
`;
